--- a/golemdb_sql/pyproject.toml
+++ b/golemdb_sql/pyproject.toml
@@ -26,6 +26,8 @@ python = ">=3.10,<4.0"
 golem-base-sdk = "==0.1.0"
 sqlglot = "^20.0.0"
 toml = "^0.10.2"
+appdirs = "^1.4.4"
+python-dotenv = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0"
