Enhance async connection handling and web server compatibility
## Core Improvements

### Async Connection Management
- **Enhanced event loop handling**: Improved compatibility with uvloop and nested event loops
- **Lazy client initialization**: Connections now initialize on first use to avoid main thread conflicts
- **Dual initialization strategy**: Attempts main thread initialization first, falls back to background threads
- **Better error messaging**: Clear explanations for signal handler limitations in web server environments

### Web Server Integration
- **TestApp enhancements**: Added GolemBase connection pool and direct API endpoints
- **Multiple deployment options**: Simple HTTP server, connection pre-initialization, and direct GolemBase APIs
- **Environment configuration**: Enhanced .env support with comprehensive examples
- **Connection sharing patterns**: Demonstrates proper connection lifecycle management

### Dependencies & Compatibility
- **Added nest-asyncio support**: Better handling of nested event loops (with uvloop fallback)
- **Updated dependencies**: Added python-dotenv for environment configuration
- **Enhanced dialect configuration**: Improved GolemBase URL parameter parsing and validation

## New Features

### API Examples
- **Simple HTTP API server**: Working example that respects signal handler requirements
- **Direct GolemBase CRUD**: User management endpoints using native GolemBase connections
- **Multi-format deployment**: Scripts for various deployment scenarios (standalone, web server, etc.)

### Enhanced Error Handling
- **Graceful degradation**: Clear error messages when web server constraints conflict with GolemBase requirements
- **Connection diagnostics**: Improved debugging information for connection lifecycle
- **Signal handler awareness**: Proper detection and handling of main thread requirements

## Technical Details

### Connection Architecture
- **Thread-aware initialization**: Detects execution context and chooses appropriat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ classifiers = [
 python = ">=3.10,<4.0"
 golem-base-sdk = "==0.1.0"
 SQLAlchemy = ">=1.4.0,<3.0"
+golemdb-sql = {path = "./golemdb_sql", develop = true}
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0"
