--- a/golemdb_sql/pyproject.toml
+++ b/golemdb_sql/pyproject.toml
@@ -28,6 +28,7 @@ sqlglot = "^20.0.0"
 toml = "^0.10.2"
 appdirs = "^1.4.4"
 python-dotenv = "^1.1.1"
+nest-asyncio = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0"
