--- a/testapp/pyproject.toml
+++ b/testapp/pyproject.toml
@@ -13,10 +13,13 @@ packages = [
 python = ">=3.10,<4.0"
 # Use the local dialect package in development
 sqlalchemy-dialects-golembase = {path = "../", develop = true}
+# Direct dependency on golemdb-sql subproject
+golemdb-sql = {path = "../golemdb_sql", develop = true}
 fastapi = "^0.109"
 uvicorn = {extras = ["standard"], version = "^0.27"}
 pydantic = "^2.5"
 SQLAlchemy = ">=1.4.0,<3.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0"
